--- a/css/layout.css
+++ b/css/layout.css
@@ -86,8 +86,8 @@ html {
 }
 
 #main-area {
-    width: 700px;
-    max-width: 700px;
+    width: 800px;
+    max-width: 800px;
     flex-grow: 0;
     flex-shrink: 0;
     margin-left: auto;
@@ -97,6 +97,7 @@ html {
     background-color: #222;
     overflow-y: auto;
     position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     border: 1px solid #444;
